tests/ui/coherence/coherence-impl-trait-for-trait.stderr
error[E0371]: the object type `(dyn Baz + 'static)` automatically implements the trait `Foo`
  --> $DIR/coherence-impl-trait-for-trait.rs:9:1
   |
LL | impl Foo for dyn Baz { }
   | ^^^^^^^^^^^^^^^^^^^^ `(dyn Baz + 'static)` automatically implements trait `Foo`

error[E0371]: the object type `(dyn Baz + 'static)` automatically implements the trait `Bar`
  --> $DIR/coherence-impl-trait-for-trait.rs:11:1
   |
LL | impl Bar for dyn Baz { }
   | ^^^^^^^^^^^^^^^^^^^^ `(dyn Baz + 'static)` automatically implements trait `Bar`

error[E0371]: the object type `(dyn Baz + 'static)` automatically implements the trait `Baz`
  --> $DIR/coherence-impl-trait-for-trait.rs:13:1
   |
LL | impl Baz for dyn Baz { }
   | ^^^^^^^^^^^^^^^^^^^^ `(dyn Baz + 'static)` automatically implements trait `Baz`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0371`.
